Provider registration complete